--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -9,7 +9,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Test</h1>
+	<h1>Welcome {{firstName}} {{lastName}}</h1>
 	<a href=""></a>
 </body>
 </html>
