started work on AST/Lexer/Parser

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -9,6 +9,11 @@
 	<title>Document</title>
 </head>
 <body>
+
+{{ if username == null }}
+	<a href="">Log in</a>
+{{ endif }}
+
 	<h1>Welcome {{firstName}} {{lastName}}</h1>
 	<a href=""></a>
 </body>
