basic interpretation working, added support for gt,lt,le,ge

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -12,9 +12,10 @@
 
 {{ if username == null then}}
 	<a href="">Log in</a>
+{{ else }}
+	<a href="">Logout</a>
 {{ endif }}
 
-	<h1>Welcome {{firstName}} {{lastName}}</h1>
 	<a href=""></a>
 </body>
 </html>
