basic templating with if statements is working

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-{{ if username == null then}}
+<% if username == null then %>
 	<a href="">Log in</a>
-{{ else }}
+<% else  %>
 	<a href="">Logout</a>
-{{ endif }}
+<% endif %>
 
 	<a href=""></a>
 </body>
