refactored interpretation of template code

--- a/src/test/resources/index-no-code.html
+++ b/src/test/resources/index-no-code.html
@@ -10,22 +10,9 @@
 </head>
 <body>
 
-<% if username == null then %>
-	<a href="">Log in</a>
-<% else  %>
-	<a href="">Logout</a>
-<% endif %>
-
-<% if username == "test" then %>
-<h1>Hello <%=username%></h1>
-<% else %>
-<h1>Welcome</h1>
-<% endif %>
-
-<!--<% if username != null then %>-->
-<div>Commented</div>
-<!--<% endif %>-->
-
-	<a href=""></a>
+<a href="">Log in</a>
+<a href="">Logout</a>
+<!--<div>Commented</div>-->
+<a href=""></a>
 </body>
 </html>
