changed gtl template resolve prefix; added # prefix to all 'implicit' object in default template resolver

--- a/src/test/resources/parametrized-include.html
+++ b/src/test/resources/parametrized-include.html
@@ -1,4 +1,4 @@
 <div class="container">
 <% include "parametrized-card.html" as card; %>
-<% #card(title="This is a card title",  body="This is a card body") %>
+<% @card(title="This is a card title",  body="This is a card body") %>
 </div>
